# DashboardLeaf

./: .gitignore  Dockerfile  Pipfile  README.md  pageSettings-example.json  pyproject.toml  pytest.ini  renovate.json  settings-example.json
config/: pageSettings-example.json  settings-example.json
dashboard_leaf/: DashboardLeaf.py  version.json
dashboard_leaf/blueprints/: Routes.py
dashboard_leaf/logic/: Constants.py  Helpers.py  Registry.py
dashboard_leaf/logic/display/: Image.py
dashboard_leaf/logic/page/: PageManager.py
dashboard_leaf/logic/service/: ServiceManager.py  ServiceRegistry.py
dashboard_leaf/logic/service/services/: IcsService.py  JsonService.py  StorageLeafService.py  WeatherService.py
dashboard_leaf/logic/tile/: Tile.py  TileRegistry.py  TileScheduler.py
dashboard_leaf/logic/tile/tiles/: BoardGameTile.py  ClockTile.py  CurrentWeatherTile.py  GarbageContainerScheduleTile.py  HourlyForecastTile.html  HourlyForecastTile.py  SensorLineChartTile.html  SensorLineChartTile.py  SevenDaysForecastTile.html  SevenDaysForecastTile.py  SimpleSensorValueTile.html  SimpleSensorValueTile.py
dashboard_leaf/static/css/: main.css
dashboard_leaf/templates/: index.html
src/: DashboardLeaf.py  Main.py  Pipfile  ProjectLeaf.py  test.py  version.json
src/blueprints/: Routes.py
src/libs/lib/waveshare_epd/: epdconfig.py
src/logic/: Constants.py  Helpers.py  Image.py  Main.py  Page.py  Registry.py
src/logic/display/: Image.py  Main.py
src/logic/page/: PageInstance.py  PageManager.py
src/logic/service/: ServiceManager.py  ServiceRegistry.py
src/logic/service/services/: IcsService.py  JenkinsSingleJobService.py  StorageLeafService.py  WeatherService.py  WeatherSevenDaysService.py
src/logic/services/: JenkinsService.py
src/logic/tile/: Tile.py  TileRegistry.py  TileScheduler.py
src/logic/tile/tiles/: BoardGameTile.html  BoardGameTile.py  ClockTile.html  ClockTile.py  CurrentTemperatureTile.html  CurrentTemperatureTile.py  CurrentWeatherTile.html  CurrentWeatherTile.py  GarbageContainerScheduleTile.html  GarbageContainerScheduleTile.py  HourlyForecastTile.html  HourlyForecastTile.py  SensorLineChartTile.html  SensorLineChartTile.py  SevenDaysForecastTile.html  SevenDaysForecastTile.py  SimpleSensorValueTile.py  TestSensorLineChartTile.py
src/page/: Page.py  PageInstance.py  PageManager.py  PageRegistry.py
src/page/pages/: ClockPage.py
src/static/css/: main.css
src/static/js/: main.js
src/static/js/libs/: gridstack.min.js
src/templates/: index.html  macros.html  page.html
src/tile/: Tile.py  TileRegistry.py  TileScheduler.py  TileService.py
src/tile/tiles/: ClockTile.py
test/logic/: HelpersTest.py  TestHelpers.py
(+3 files in other folders)
