[tool.poetry]
name = "DashboardLeaf"
version = "1.33.0"
description = "Flask server for displaying multiple dashboards with custom tiles that refresh periodically."
authors = ["TheCodeLabsDevs"]
packages = [{include = "dashboard_leaf"}]

[[tool.poetry.source]]
name = "TheCodeLabs"
url = "https://pypi.thecodelabs.de"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.9"
thecodelabs-baseutils = {version = "*", source = "TheCodeLabs" }
thecodelabs-flaskutils = {version = "*", source = "TheCodeLabs" }
flask = "3.1.0"
apscheduler = "3.11.0"
gevent = "25.5.1"
flask-socketio = "5.5.1"
Babel = "2.17.0"
pytz = "2025.1"

# services
icalendar = "6.1.1"

# tiles
timeago = "1.0.16"

[tool.poetry.dev-dependencies]
pytest= "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
