[tool.poetry]
name = "DashboardLeaf"
version = "1.35.0"
description = "Flask server for displaying multiple dashboards with custom tiles that refresh periodically."
authors = ["TheCodeLabsDevs"]
packages = [{include = "dashboard_leaf"}]

[[tool.poetry.source]]
name = "TheCodeLabs"
url = "https://pypi.thecodelabs.de"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.9"
thecodelabs-baseutils = {version = "*", source = "TheCodeLabs" }
thecodelabs-flaskutils = {version = "*", source = "TheCodeLabs" }
flask = "3.1.2"
apscheduler = "3.11.1"
gevent = "25.9.1"
flask-socketio = "5.5.1"
Babel = "2.17.0"
pytz = "2025.2"

# services
icalendar = "6.3.2"

# tiles
timeago = "1.0.16"

[tool.poetry.group.dev.dependencies]
pytest= "8.4.2"  # last version with python3.9 compatibility

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
