[tool.poetry]
name = "DashboardLeaf"
version = "1.38.0"
description = "Flask server for displaying multiple dashboards with custom tiles that refresh periodically."
authors = ["TheCodeLabsDevs"]
packages = [{include = "dashboard_leaf"}]

[[tool.poetry.source]]
name = "TheCodeLabs"
url = "https://pypi.thecodelabs.de"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.14"
thecodelabs-baseutils = {version = "*", source = "TheCodeLabs" }
thecodelabs-flaskutils = {version = "*", source = "TheCodeLabs" }
flask = "3.1.3"
apscheduler = "3.11.2"
gevent = "25.9.1"
flask-socketio = "5.6.0"
Babel = "2.18.0"
pytz = "2026.1.post1"

# services
icalendar = "6.3.2"

# tiles
timeago = "1.0.16"

[tool.poetry.group.dev.dependencies]
pytest= "9.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
